Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101074

Assert in qqmljstypepropagator.cpp triggers and prevents compilation

XMLWordPrintable

    • 1829d7c64c (qt/qtdeclarative/dev) 1829d7c64c (qt/tqtc-qtdeclarative/dev) 9b48322f72 (qt/qtdeclarative/6.3) 9b48322f72 (qt/tqtc-qtdeclarative/6.3)

      With current Qt dev (Declarative at 88147eb3f6) and Qt Creator 7.0 sources I get

      FAILED: src/libs/tracing/.rcc/qmlcache/Tracing_qml/MainView_qml.cpp
      cd /data/dev/creator-out/src/libs/tracing && /usr/bin/cmake -E make_directory /data/dev/creator-out/src/libs/tracing/.rcc/qmlcache/Tracing_qml && /data/dev/qt-6/qtbase/libexec/qmlcachegen --resource-path /QtCreator/Tracing/MainView.qml -i /data/dev/creator-out/qml_modules/QtCreator/Tracing/qmldir --resource /data/dev/creator-out/src/libs/tracing/.rcc/res_tracingshaders.qrc --resource /data/dev/creator-out/src/libs/tracing/.rcc/qmake_QtCreator_Tracing.qrc --resource /data/dev/creator-out/src/libs/tracing/.rcc/Tracing_raw_qml_0.qrc -o /data/dev/creator-out/src/libs/tracing/.rcc/qmlcache/Tracing_qml/MainView_qml.cpp /data/dev/creator-out/src/libs/tracing/qml/MainView.qml
      ASSERT: "!errorType.isEmpty()" in file qtdeclarative/src/qmlcompiler/qqmljstypepropagator.cpp, line 455
      Aborted
      ninja: build stopped: subcommand failed.
      

        For Gerrit Dashboard: QTBUG-101074
        # Subject Branch Project Status CR V

            max.goldstein Maximilian Goldstein
            hjk hjk
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes