tests/auto/qml/qmllint/data/callJSValueProp.qml
@@ -1,0 +1,6 @@
+import QtQml
+
+QtObject {
+    function foo() {}
+    Component.onCompleted: Qt.callLater(foo);
+}
