tests/auto/qml/qmllint/data/shadowedMethod.qml
@@ -1,0 +1,8 @@
+import QtQuick
+
+QtObject {
+    function foo() {}
+    property bool foo: false
+
+    Component.onCompleted: foo()
+}
