tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -862,6 +862,30 @@ void TestQmllint::dirtyQmlCode_data()
             << QStringLiteral("jsVarDeclarationsWriteConst.qml")
             << QStringLiteral("Cannot assign to read-only property constProp") << QString()
             << QString() << false;
+    QTest::newRow("shadowedSignal")
+            << QStringLiteral("shadowedSignal.qml")
+            << QStringLiteral("Signal \"pressed\" is shadowed by a property.") << QString()
+            << QString() << false;
+    QTest::newRow("shadowedSignalWithId")
+            << QStringLiteral("shadowedSignalWithId.qml")
+            << QStringLiteral("Signal \"pressed\" is shadowed by a property") << QString()
+            << QString() << false;
+    QTest::newRow("shadowedSlot") << QStringLiteral("shadowedSlot.qml")
+                                  << QStringLiteral("Slot \"move\" is shadowed by a property")
+                                  << QString() << QString() << false;
+    QTest::newRow("shadowedMethod") << QStringLiteral("shadowedMethod.qml")
+                                    << QStringLiteral("Method \"foo\" is shadowed by a property.")
+                                    << QString() << QString() << false;
+    QTest::newRow("callVarProp")
+            << QStringLiteral("callVarProp.qml")
+            << QStringLiteral("Property \"foo\" is a variant property. It may or may not be a "
+                              "method. Use a regular function instead.")
+            << QString() << QString() << false;
+    QTest::newRow("callJSValue")
+            << QStringLiteral("callJSValueProp.qml")
+            << QStringLiteral("Property \"callLater\" is a QJSValue property. It may or may not be "
+                              "a method. Use a regular Q_INVOKABLE instead.")
+            << QString() << QString() << false;
 }
 
 void TestQmllint::dirtyQmlCode()
